[gd_scene load_steps=2 format=3 uid="uid://dkh0v46p2csnf"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_nxi8t"]

[node name="main" type="Node2D"]
script = ExtResource("1_nxi8t")

[node name="user_interface" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="user_interface"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="user_interface/VBoxContainer"]
layout_mode = 2

[node name="attraction_range_label" type="Label" parent="user_interface/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Attraction Range:"

[node name="attraction_range" type="HSlider" parent="user_interface/VBoxContainer/VBoxContainer"]
layout_mode = 2
min_value = 2.5
max_value = 500.0
value = 2.5

[node name="VBoxContainer2" type="VBoxContainer" parent="user_interface/VBoxContainer"]
layout_mode = 2

[node name="attraction_strength_label" type="Label" parent="user_interface/VBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Attraction Strength:"

[node name="attraction_strength" type="HSlider" parent="user_interface/VBoxContainer/VBoxContainer2"]
layout_mode = 2
min_value = 10.0
max_value = 200.0
value = 10.0

[node name="VBoxContainer3" type="VBoxContainer" parent="user_interface/VBoxContainer"]
layout_mode = 2

[node name="repulsion_range_label" type="Label" parent="user_interface/VBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "Repulsion Range:"

[node name="repulsion_range" type="HSlider" parent="user_interface/VBoxContainer/VBoxContainer3"]
layout_mode = 2
min_value = 2.5
max_value = 500.0
value = 2.5

[node name="VBoxContainer4" type="VBoxContainer" parent="user_interface/VBoxContainer"]
layout_mode = 2

[node name="repulsion_strength_label" type="Label" parent="user_interface/VBoxContainer/VBoxContainer4"]
layout_mode = 2
text = "Repulsion Strength:
"

[node name="repulsion_strength" type="HSlider" parent="user_interface/VBoxContainer/VBoxContainer4"]
layout_mode = 2
min_value = 10.0
max_value = 200.0
value = 10.0

[node name="pause_button" type="Button" parent="user_interface/VBoxContainer"]
layout_mode = 2
action_mode = 0
text = "Pause Simulation"

[node name="clear_button" type="Button" parent="user_interface/VBoxContainer"]
layout_mode = 2
action_mode = 0
text = "Clear Simulation"

[connection signal="value_changed" from="user_interface/VBoxContainer/VBoxContainer/attraction_range" to="." method="_on_attraction_range_value_changed"]
[connection signal="value_changed" from="user_interface/VBoxContainer/VBoxContainer2/attraction_strength" to="." method="_on_attraction_strength_value_changed"]
[connection signal="value_changed" from="user_interface/VBoxContainer/VBoxContainer3/repulsion_range" to="." method="_on_repulsion_range_value_changed"]
[connection signal="value_changed" from="user_interface/VBoxContainer/VBoxContainer4/repulsion_strength" to="." method="_on_repulsion_strength_value_changed"]
[connection signal="pressed" from="user_interface/VBoxContainer/pause_button" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="user_interface/VBoxContainer/clear_button" to="." method="_on_clear_button_pressed"]
